test/tests/compiler/18_structures/invalid_parse/var_decl_two_struct_kws.plx
type struc s ( a: i32 )

x: struc struc s;  # can't use struct keyword twice in a type specifier

pub fn main(none) i32 {
    return 0
}
